snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2.jar.md5
24ed57675aac6b6281a8e5277d55560c